--- a/PortfolioWebASP/PortfolioWebASP/Site1.Master
+++ b/PortfolioWebASP/PortfolioWebASP/Site1.Master
@@ -25,7 +25,13 @@
     <script src="bootstrap/js/bootstrap.min.js"></script>
 
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="datatables/js/jquery.dataTables.min.js"></script>
 
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css" rel="stylesheet"/>
+    <link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet"/>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
 
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
